ffi/derive/tests/ui_fail/derive_skip_field.stderr
error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__b` in this scope
  --> tests/ui_fail/derive_skip_field.rs:33:9
   |
9  | #[ffi_export]
   | ------------- similarly named function `FfiStruct__a` defined here
...
33 |         FfiStruct__b(FfiConvert::into_ffi(&s, &mut ()), b.as_mut_ptr());
   |         ^^^^^^^^^^^^ help: a function with a similar name exists: `FfiStruct__a`

error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__set_b` in this scope
  --> tests/ui_fail/derive_skip_field.rs:35:9
   |
9  | #[ffi_export]
   | ------------- similarly named function `FfiStruct__set_a` defined here
...
35 |         FfiStruct__set_b(
   |         ^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `FfiStruct__set_a`
